fixed scrollbar on conversation and removed searchbar when in conversations

--- a/src/components/PrivateConversation/styles.scss
+++ b/src/components/PrivateConversation/styles.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   position: relative;
   width: 100%;
-  max-height: 100vh;
+  max-height: 80vh;
   flex: 1;
 
   &_header {
@@ -92,11 +92,12 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column-reverse;
-    justify-content: flex-end;
     overflow: hidden;
     overflow-y: scroll;
     padding: 1em;
     flex: 1;
+    min-height: 0px;
+    margin-bottom: 5px;
 
     &_title {
       margin: 20px;
@@ -164,12 +165,12 @@
 
   &_form {
     width: 100%;
-    height: 90px;
     background-color: vars.$light-color;
     display: flex;
     align-items: center;
     justify-content: center;
     bottom: 0;
+    padding: 15px;
 
     &_container {
       background: white;
